welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (! isFacingWall()) {
  ^SlugSnail:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (colorOfTile == c)
  ^SlugSnail:24: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  	return true;
        ^SlugSnail:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false;
  ^